objects/WT_Relationship_Planning__c.object
<CustomObject>
    <fields>
        <fullName>WT_Account_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Plannings</relationshipLabel>
        <relationshipName>Relationship_Plannings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WT_Approximate_Balance__c</fullName>
        <label>Approximate Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Current_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Bank</label>
        <referenceTo>WT_Competitor__c</referenceTo>
        <relationshipLabel>Relationship Plannings</relationshipLabel>
        <relationshipName>Relationship_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Day_To_Day_Account_Ids__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day To Day Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Plannings (daytodayaccountid)</relationshipLabel>
        <relationshipName>Relationship_Plannings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_IDs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSD Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Next_Follow_up_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Follow-up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of defect 2220</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationship_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_RP_Product_Type__c</fullName>
        <label>RP Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit / Loans</fullName>
                </value>
                <value>
                    <fullName>Treasury / Deposit</fullName>
                </value>
                <value>
                    <fullName>Wealth / 401K</fullName>
                </value>
                <value>
                    <fullName>Corporate Card</fullName>
                </value>
                <value>
                    <fullName>Derivatives</fullName>
                </value>
                <value>
                    <fullName>International / FX</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Wintrust at Work</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relationship Planning</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Account__c</columns>
        <columns>WT_Account_Notes__c</columns>
        <columns>WT_Approximate_Balance__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>WT_Current_Bank__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>WT_Next_Follow_up_date__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>WT_RP_Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Relationship Planning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Plannings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WT_Next_Follow_Up_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>WT_Next_Follow_up_date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>WT_Next_Follow_up_date__c</errorDisplayField>
        <errorMessage>Next Follow-up  Date cannot be prior to current date .</errorMessage>
    </validationRules>
</CustomObject>